[gd_scene load_steps=3 format=3 uid="uid://b5tdyq8opcs0u"]

[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="1_al365"]
[ext_resource type="Script" uid="uid://ci85y60tfmp4o" path="res://sources/gui/Settings.gd" id="2_wg4ki"]

[node name="Panel" type="PanelContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(180, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -992.0
offset_bottom = -396.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_al365")
script = ExtResource("2_wg4ki")
blockActions = true

[node name="Margin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TabBar" type="TabContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Render" type="ScrollContainer" parent="Margin/TabBar"]
layout_mode = 2
size_flags_vertical = 3
metadata/_tab_index = 0

[node name="RenderVBox" type="VBoxContainer" parent="Margin/TabBar/Render"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Preset" type="HBoxContainer" parent="Margin/TabBar/Render/RenderVBox"]
visible = false
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="Margin/TabBar/Render/RenderVBox/Preset"]
layout_mode = 2
size_flags_horizontal = 3
text = "Preset"

[node name="Option" type="OptionButton" parent="Margin/TabBar/Render/RenderVBox/Preset"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "PC"
popup/item_0/id = 0
popup/item_1/text = "Mobile"
popup/item_1/id = 1

[node name="VisualVBox" type="VBoxContainer" parent="Margin/TabBar/Render/RenderVBox"]
layout_mode = 2

[node name="Visual" type="Label" parent="Margin/TabBar/Render/RenderVBox/VisualVBox"]
layout_mode = 2
text = "Visual"

[node name="Fullscreen" type="CheckButton" parent="Margin/TabBar/Render/RenderVBox/VisualVBox"]
layout_mode = 2
text = "Fullscreen Mode"

[node name="WindowResolution" type="HBoxContainer" parent="Margin/TabBar/Render/RenderVBox/VisualVBox"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="Margin/TabBar/Render/RenderVBox/VisualVBox/WindowResolution"]
layout_mode = 2
size_flags_horizontal = 3
text = " Window Resolution"

[node name="Option" type="OptionButton" parent="Margin/TabBar/Render/RenderVBox/VisualVBox/WindowResolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Scaling" type="HBoxContainer" parent="Margin/TabBar/Render/RenderVBox/VisualVBox"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="Margin/TabBar/Render/RenderVBox/VisualVBox/Scaling"]
layout_mode = 2
size_flags_horizontal = 3
text = " Scaling"

[node name="Option" type="OptionButton" parent="Margin/TabBar/Render/RenderVBox/VisualVBox/Scaling"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 3
popup/item_0/text = "x1"
popup/item_0/id = 0
popup/item_1/text = "x2"
popup/item_1/id = 1
popup/item_2/text = "x3"
popup/item_2/id = 2

[node name="ActionOverlay" type="CheckButton" parent="Margin/TabBar/Render/RenderVBox/VisualVBox"]
layout_mode = 2
text = "Action Overlay"

[node name="HSeparator2" type="HSeparator" parent="Margin/TabBar/Render/RenderVBox"]
layout_mode = 2

[node name="EffectVBox" type="VBoxContainer" parent="Margin/TabBar/Render/RenderVBox"]
layout_mode = 2

[node name="Effect" type="Label" parent="Margin/TabBar/Render/RenderVBox/EffectVBox"]
layout_mode = 2
text = "Effect"

[node name="Lighting" type="CheckButton" parent="Margin/TabBar/Render/RenderVBox/EffectVBox"]
layout_mode = 2
text = "Lighting"

[node name="HQx4" type="CheckButton" parent="Margin/TabBar/Render/RenderVBox/EffectVBox"]
layout_mode = 2
text = "High Quality Scale"

[node name="CRT" type="CheckButton" parent="Margin/TabBar/Render/RenderVBox/EffectVBox"]
layout_mode = 2
text = "Cathode Ray Tube"

[node name="Label" type="Label" parent="Margin/TabBar/Render/RenderVBox"]
layout_mode = 2

[node name="Audio" type="ScrollContainer" parent="Margin/TabBar"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/TabBar/Audio"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Global Volume" type="HBoxContainer" parent="Margin/TabBar/Audio/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Margin/TabBar/Audio/VBoxContainer/Global Volume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Global Volume"

[node name="HSlider" type="HSlider" parent="Margin/TabBar/Audio/VBoxContainer/Global Volume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
tick_count = 10
ticks_on_borders = true

[connection signal="gui_input" from="." to="." method="OnGuiInput"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="toggled" from="Margin/TabBar/Render/RenderVBox/VisualVBox/Fullscreen" to="." method="set_fullscreen"]
[connection signal="item_selected" from="Margin/TabBar/Render/RenderVBox/VisualVBox/WindowResolution/Option" to="." method="set_resolutionIdx"]
[connection signal="item_selected" from="Margin/TabBar/Render/RenderVBox/VisualVBox/Scaling/Option" to="." method="set_scaling"]
[connection signal="toggled" from="Margin/TabBar/Render/RenderVBox/VisualVBox/ActionOverlay" to="." method="set_actionoverlay"]
[connection signal="toggled" from="Margin/TabBar/Render/RenderVBox/EffectVBox/Lighting" to="." method="set_lighting"]
[connection signal="toggled" from="Margin/TabBar/Render/RenderVBox/EffectVBox/HQx4" to="." method="set_hq4x"]
[connection signal="toggled" from="Margin/TabBar/Render/RenderVBox/EffectVBox/CRT" to="." method="set_crt"]
[connection signal="value_changed" from="Margin/TabBar/Audio/VBoxContainer/Global Volume/HSlider" to="." method="set_audiogeneral"]
